fixed folder naming

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,8 @@
 # This .gitignore file was automatically created by Microsoft(R) Visual Studio.
 ################################################################################
 
-/ConsoleApp1/bin/Debug
-/ConsoleApp1/obj/Debug
+/IngestToEventHub/bin/Debug
+/IngestToEventHub/obj/Debug
 /packages
 /ReadFromEventHub/obj/Debug
 /ReadFromEventHub/bin/Debug
